[package]
name = "advent-of-code"
version = "2.0.24"
authors = ["Robert Klink <roberthklink@gmail.com>"]
edition = "2021"

[lib]
name = "advent_of_code"
path = "aoc/lib.rs"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
cached = "0.54.0"
itertools = "0.13.0"
once_cell = "1.20.2"
regex = "1.11.1"
